chore: make downloadInvoice by its name